--- a/_posts/2017-10-17-iot-ex.md
+++ b/_posts/2017-10-17-iot-ex.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 comments : true
-title: git project를 github로 공개하기
+title: 2017 사물인터넷 국제전시회 참관기
 ---
 ![image](../images/iot-ex/IMG_8584_small.JPG)
 
