--- a/404.md
+++ b/404.md
@@ -1,8 +1,10 @@
 ---
 layout: page
-title: 404 - Page not found
+title: 404 Error
+tagline: Ah snap! We could not find what you are looking for!
+permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Try got get back to the Home Page and start over!
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[Go to the Home Page]({{ site.url }}{{ site.baseurl }})
