Subtitle 및 Description 추가

--- a/_posts/2017-10-17-iot-ex.md
+++ b/_posts/2017-10-17-iot-ex.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 2017사물인터넷 국제전시회 참관기
+subtitle: 2017 사물인터넷 참관
+description: 2017 사물인터넷 참관하고 소감에 대해서
 date:   2017-10-17 08:43:59
 author: Jeongjin Kim
 categories: review
