--- a/_posts/2018-05-25-jekyll.md
+++ b/_posts/2018-05-25-jekyll.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: jekyll로 새로 작성한 포스트가 안보일 때
+subtitle: jekyll로 새로 작성한 포스트가 안보일 때 해결 방법
+description: jekyll로 새로 작성한 포스트가 안보일 때 해결 방법
 date:   2018-05-25 11:40:00 +0900
 author: Jeongjin Kim
 categories: ruby
